# video-sorter

./: .gitignore  README.md  pyproject.toml  vsorter.yaml
vsorter/: avi2mp4.py  blink_summary.py  fix_file_times.py  hello.py  mkmp4.py  movie2gif.py  movie_utils.py  vsorter.py  vsorter_flask_app.py
